@@ -27,7 +27,7 @@
 #include "cairo-support.h"
 
 static void
-murrine_draw_inset (cairo_t          *cr,
+murrine_draw_inset (cairo_t *cr,
                     const MurrineRGB *bg_color,
                     double x, double y, double w, double h,
                     double radius, uint8 corners)
@@ -82,7 +82,7 @@ murrine_draw_inset (cairo_t          *cr,
 
 static void
 murrine_draw_highlight_and_shade (cairo_t *cr,
-                                  const MurrineColors *colors,
+                                  const MurrineColors    *colors,
                                   const ShadowParameters *widget,
                                   int width, int height, int radius)
 {
