@@ -1,10 +1,16 @@
 2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/murrine_draw.c (murrine_draw_menuitem):
+	I guess this should fix menuitems with roundness = 1, even if I haven't
+	seen those bugs (but the code now seems correct).
+
+2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* src/murrine_style.c (murrine_style_draw_flat_box),
 	(murrine_style_draw_shadow), (murrine_style_draw_box_gap),
 	(murrine_style_draw_box), (murrine_style_draw_shadow_gap),
 	(murrine_style_draw_focus):
-	Starting reducing duplicated params.corners initializations.
+	Started reducing duplicated params.corners initializations.
 	Could break something, but it shouldn't.
 
 2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>
